# xraypy

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py  test.ipynb
XRDpy/: help.txt  macro.py  main.py  package_params.py  poni.py  process.py  process_default.py  specular.py  tiff_loader.py  transform.py  transform.pyx  transform_function.cpp  transform_function.pyx
XRDpy/incident/: macro.py  main.py  plot.py  specular.py
files/: 1 3 detector.h5  config.toml  eiger_stitch 1 1 detector.h5  eiger_stitch 1 2 detector.h5  eiger_stitch 1 3 detector.h5  eiger_stitch 2 1 detector.h5  eiger_stitch 2 2 detector.h5  eiger_stitch 2 3 detector.h5
files/Detectors/: eiger_stitch_1-1.h5  eiger_stitch_1-2.h5  eiger_stitch_1-3.h5  eiger_stitch_2-1.h5  eiger_stitch_2-2.h5  eiger_stitch_2-3.h5
files/Jupyter-Notebooks/: cal.poni  make-detectors.ipynb  params.yaml  pyFAI-geo-tests.ipynb  reduce-GIWAXS.ipynb  reduce-WAXS.ipynb  specular-analysis.ipynb  test.ipynb  transform-GIWAXS.ipynb
files/other/: tpp_fitting.py  tpp_fitting2.py
xraypy/: __init__.py  config.toml  data_loading.py  macro.py  main.py  package_params.py  process.py  process_default.py  specular.py
xraypy/Jupyter-Notebooks/: test.ipynb
