[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "XRDpy"
version = "3.11"
description = "Python package for controlling Xenocs instrument for GIXS"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Teddy Tortorici", email = "edward.tortorici@colorado.edu" }
]
license = { text = "GPL" }
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GPL License",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy>=1.7",
    "pyFAI",
    "fabio",
    "matplotlib",
    "pyside6",
]
requires-python = ">=3.9"

[project.scripts]
STITCH = "XRDpy.main:stitch"
SCAN = "XRDpy.main:make_scan"
MOVE = "XRDpy.main:move"
PLOT = "XRDpy.main:plot"

[tool.setuptools]
packages = ["source"]
include-package-data = true
