[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "XRDpy"
version = "4.0"
description = "Python package for controlling Xenocs instrument for GIXS"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Teddy Tortorici", email = "edward.tortorici@colorado.edu" }
]
license = { text = "GPL" }
classifiers = [
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy>=1.7",
    "pyFAI",
    "fabio",
    "matplotlib",
    "gixpy",
    "pyside6",
]
requires-python = ">=3.9"

[project.scripts]
x-stitch = "XRDpy.main:stitch"
x-scan = "XRDpy.main:make_scan"
x-move = "XRDpy.main:move"
x-plot = "XRDpy.main:plot"

[project.urls]
Repository = "https://github.com/UCBoulder/XRDpy"
Issues = "https://github.com/UCBoulder/XRDpy/issues"

[tool.setuptools]
# packages = ["XRDpy"]
include-package-data = true
py-modules = ["package_params"]

[tool.setuptools.package-data]
XRDpy = ["**/*.mplstyle"]